--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline with Inline Reports
 
 on:
   push:
@@ -21,9 +21,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Unit & Integration Tests
     strategy:
-      fail-fast: false  # Don't cancel other jobs if one fails
+      fail-fast: false
       matrix:
-        python-version: ['3.9', '3.10', '3.11']  # Fixed: 3.1 -> 3.10
+        python-version: ['3.9', '3.10', '3.11']
     
     steps:
       - name: Checkout code
@@ -73,6 +73,7 @@ jobs:
               --cov=./ \
               --cov-report=xml:coverage.xml \
               --cov-report=html:htmlcov \
+              --cov-report=term-missing \
               --junitxml=test_results/unit-test-results.xml \
               --html=test_results/unit-report.html \
               --self-contained-html \
@@ -83,6 +84,7 @@ jobs:
               --cov=./ \
               --cov-report=xml:coverage.xml \
               --cov-report=html:htmlcov \
+              --cov-report=term-missing \
               --junitxml=test_results/unit-test-results.xml \
               --html=test_results/unit-report.html \
               --self-contained-html \
@@ -93,6 +95,7 @@ jobs:
               --cov=./ \
               --cov-report=xml:coverage.xml \
               --cov-report=html:htmlcov \
+              --cov-report=term-missing \
               --junitxml=test_results/unit-test-results.xml \
               --html=test_results/unit-report.html \
               --self-contained-html \
@@ -100,6 +103,16 @@ jobs:
           else
             echo "No test files found, creating empty results"
             echo '<?xml version="1.0" encoding="UTF-8"?><testsuites tests="0" failures="0" errors="0" time="0"><testsuite name="empty" tests="0" failures="0" errors="0" time="0"></testsuite></testsuites>' > test_results/unit-test-results.xml
+          fi
+
+      # NEW: Generate coverage summary for display
+      - name: Generate coverage summary
+        if: always()
+        run: |
+          if [ -f "coverage.xml" ]; then
+            echo "COVERAGE_SUMMARY<<EOF" >> $GITHUB_ENV
+            coverage report --format=text >> $GITHUB_ENV
+            echo "EOF" >> $GITHUB_ENV
           fi
 
       - name: Run integration tests (if separate directory exists)
@@ -117,34 +130,125 @@ jobs:
             echo "No separate integration tests directory found"
           fi
 
-      - name: Verify test results were created
-        run: |
-          echo "Contents of test_results directory:"
-          ls -la test_results/ || echo "No test_results directory"
-          echo "Contents of root directory (looking for coverage.xml):"
-          ls -la *.xml || echo "No XML files in root"
-          echo "Contents of htmlcov directory:"
-          ls -la htmlcov/ || echo "No htmlcov directory"
-
-      - name: Display test results summary
+      # NEW: Parse test results for inline display
+      - name: Parse test results
         if: always()
         run: |
-          echo "## ✅ Unit & Integration Test Summary" >> $GITHUB_STEP_SUMMARY
-          echo "🐍 **Python Version**: ${{ matrix.python-version }}" >> $GITHUB_STEP_SUMMARY
-          
+          # Parse JUnit XML for test summary
           if [ -f "test_results/unit-test-results.xml" ]; then
-            echo "📊 **Unit Test Results**: Available in artifacts" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "⚠️ **Unit Test Results**: No results found" >> $GITHUB_STEP_SUMMARY
+            python3 << 'EOF'
+          import xml.etree.ElementTree as ET
+          import os
+          
+          try:
+              tree = ET.parse('test_results/unit-test-results.xml')
+              root = tree.getroot()
+              
+              total_tests = int(root.get('tests', 0))
+              failures = int(root.get('failures', 0))
+              errors = int(root.get('errors', 0))
+              passed = total_tests - failures - errors
+              
+              # Write to environment for later use
+              with open(os.environ['GITHUB_ENV'], 'a') as f:
+                  f.write(f'TESTS_TOTAL={total_tests}\n')
+                  f.write(f'TESTS_PASSED={passed}\n')
+                  f.write(f'TESTS_FAILED={failures}\n')
+                  f.write(f'TESTS_ERROR={errors}\n')
+                  
+              # Get individual test results
+              test_results = []
+              for testcase in root.findall('.//testcase'):
+                  classname = testcase.get('classname', '')
+                  name = testcase.get('name', '')
+                  time = testcase.get('time', '0')
+                  
+                  failure = testcase.find('failure')
+                  error = testcase.find('error')
+                  
+                  if failure is not None:
+                      status = "❌ FAILED"
+                      message = failure.get('message', '')[:100] + "..." if len(failure.get('message', '')) > 100 else failure.get('message', '')
+                  elif error is not None:
+                      status = "🔥 ERROR"
+                      message = error.get('message', '')[:100] + "..." if len(error.get('message', '')) > 100 else error.get('message', '')
+                  else:
+                      status = "✅ PASSED"
+                      message = ""
+                  
+                  test_results.append(f"| {classname}.{name} | {status} | {time}s | {message} |")
+              
+              # Write test results table
+              with open(os.environ['GITHUB_ENV'], 'a') as f:
+                  f.write('TEST_RESULTS_TABLE<<EOF\n')
+                  f.write('| Test | Status | Time | Message |\n')
+                  f.write('|------|--------|------|----------|\n')
+                  for result in test_results[:20]:  # Limit to first 20 tests
+                      f.write(result + '\n')
+                  if len(test_results) > 20:
+                      f.write(f'| ... and {len(test_results) - 20} more tests | | | |\n')
+                  f.write('EOF\n')
+                  
+          except Exception as e:
+              print(f"Error parsing test results: {e}")
+          EOF
+          fi
+
+      # NEW: Enhanced step summary with inline results
+      - name: Enhanced test results summary
+        if: always()
+        run: |
+          echo "## ✅ Unit & Integration Test Summary - Python ${{ matrix.python-version }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          
+          # Test results summary
+          if [ -n "$TESTS_TOTAL" ]; then
+            echo "### 📊 Test Results Overview" >> $GITHUB_STEP_SUMMARY
+            echo "- **Total Tests**: $TESTS_TOTAL" >> $GITHUB_STEP_SUMMARY
+            echo "- **Passed**: $TESTS_PASSED ✅" >> $GITHUB_STEP_SUMMARY
+            echo "- **Failed**: $TESTS_FAILED ❌" >> $GITHUB_STEP_SUMMARY
+            echo "- **Errors**: $TESTS_ERROR 🔥" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            
+            # Calculate pass rate
+            if [ "$TESTS_TOTAL" -gt 0 ]; then
+              PASS_RATE=$((TESTS_PASSED * 100 / TESTS_TOTAL))
+              echo "- **Pass Rate**: $PASS_RATE%" >> $GITHUB_STEP_SUMMARY
+            fi
           fi
           
-          if [ -f "test_results/integration-test-results.xml" ]; then
-            echo "🔗 **Integration Test Results**: Available in artifacts" >> $GITHUB_STEP_SUMMARY
+          # Coverage summary
+          if [ -n "$COVERAGE_SUMMARY" ]; then
+            echo "### 📈 Coverage Summary" >> $GITHUB_STEP_SUMMARY
+            echo '```' >> $GITHUB_STEP_SUMMARY
+            echo "$COVERAGE_SUMMARY" >> $GITHUB_STEP_SUMMARY
+            echo '```' >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
           fi
           
-          if [ -f "coverage.xml" ]; then
-            echo "📈 **Coverage Report**: Available in artifacts" >> $GITHUB_STEP_SUMMARY
+          # Individual test results
+          if [ -n "$TEST_RESULTS_TABLE" ]; then
+            echo "### 🔍 Individual Test Results" >> $GITHUB_STEP_SUMMARY
+            echo "$TEST_RESULTS_TABLE" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
           fi
+
+      # NEW: Upload coverage to GitHub Pages (if enabled)
+      - name: Deploy coverage to GitHub Pages
+        if: github.ref == 'refs/heads/main' && matrix.python-version == '3.11'
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./htmlcov
+          destination_dir: coverage
+
+      # NEW: Coverage comment on PR
+      - name: Coverage comment
+        if: github.event_name == 'pull_request' && matrix.python-version == '3.11'
+        uses: py-cov-action/python-coverage-comment-action@v3
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COVERAGE_FILE: coverage.xml
 
       - name: Publish Test Results
         uses: dorny/test-reporter@v1
@@ -171,7 +275,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Selenium UI Tests
     needs: unit-tests
-    if: always()  # Run even if unit tests fail
+    if: always()
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -212,13 +316,6 @@ jobs:
       - name: Create test directories
         run: mkdir -p test_results
 
-      - name: Check for Selenium tests
-        run: |
-          echo "Looking for Selenium test files:"
-          find . -name "*selenium*" -type f | head -10
-          find . -name "*ui*test*" -type f | head -10
-          find . -name "test_*" -path "*selenium*" | head -10
-
       - name: Run Selenium tests
         env:
           DISPLAY: :99
@@ -252,14 +349,53 @@ jobs:
             echo '<?xml version="1.0" encoding="UTF-8"?><testsuites tests="0" failures="0" errors="0" time="0"><testsuite name="empty" tests="0" failures="0" errors="0" time="0"></testsuite></testsuites>' > test_results/selenium-test-results.xml
           fi
 
-      - name: Display test results summary
+      # NEW: Parse Selenium test results
+      - name: Parse Selenium test results
+        if: always()
+        run: |
+          if [ -f "test_results/selenium-test-results.xml" ]; then
+            python3 << 'EOF'
+          import xml.etree.ElementTree as ET
+          import os
+          
+          try:
+              tree = ET.parse('test_results/selenium-test-results.xml')
+              root = tree.getroot()
+              
+              total_tests = int(root.get('tests', 0))
+              failures = int(root.get('failures', 0))
+              errors = int(root.get('errors', 0))
+              passed = total_tests - failures - errors
+              
+              with open(os.environ['GITHUB_ENV'], 'a') as f:
+                  f.write(f'SELENIUM_TESTS_TOTAL={total_tests}\n')
+                  f.write(f'SELENIUM_TESTS_PASSED={passed}\n')
+                  f.write(f'SELENIUM_TESTS_FAILED={failures}\n')
+                  f.write(f'SELENIUM_TESTS_ERROR={errors}\n')
+          except Exception as e:
+              print(f"Error parsing selenium test results: {e}")
+          EOF
+          fi
+
+      # NEW: Enhanced Selenium test summary
+      - name: Enhanced Selenium test summary
         if: always()
         run: |
           echo "## 🌐 Selenium Test Summary" >> $GITHUB_STEP_SUMMARY
-          if [ -f "test_results/selenium-test-results.xml" ]; then
-            echo "📊 **Selenium Results**: Available in artifacts" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "⚠️ **Selenium Results**: No results found" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          
+          if [ -n "$SELENIUM_TESTS_TOTAL" ]; then
+            echo "### 📊 UI Test Results Overview" >> $GITHUB_STEP_SUMMARY
+            echo "- **Total Tests**: $SELENIUM_TESTS_TOTAL" >> $GITHUB_STEP_SUMMARY
+            echo "- **Passed**: $SELENIUM_TESTS_PASSED ✅" >> $GITHUB_STEP_SUMMARY
+            echo "- **Failed**: $SELENIUM_TESTS_FAILED ❌" >> $GITHUB_STEP_SUMMARY
+            echo "- **Errors**: $SELENIUM_TESTS_ERROR 🔥" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            
+            if [ "$SELENIUM_TESTS_TOTAL" -gt 0 ]; then
+              PASS_RATE=$((SELENIUM_TESTS_PASSED * 100 / SELENIUM_TESTS_TOTAL))
+              echo "- **Pass Rate**: $PASS_RATE%" >> $GITHUB_STEP_SUMMARY
+            fi
           fi
 
       - name: Publish Test Results
@@ -282,57 +418,86 @@ jobs:
           retention-days: 30
           if-no-files-found: warn
 
-      - name: Comment PR with test results
+  # NEW: Generate comprehensive report
+  generate-report:
+    runs-on: ubuntu-latest
+    name: Generate Comprehensive Report
+    needs: [unit-tests, selenium-tests]
+    if: always()
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Generate comprehensive report
+        run: |
+          echo "# 📊 Comprehensive Test Report - Run #${{ github.run_number }}" > report.md
+          echo "" >> report.md
+          echo "Generated on: $(date)" >> report.md
+          echo "" >> report.md
+          
+          # Summary section
+          echo "## 📈 Summary" >> report.md
+          echo "" >> report.md
+          
+          # Process each Python version
+          for version in 3.9 3.10 3.11; do
+            if [ -f "artifacts/test-results-$version/test_results/unit-test-results.xml" ]; then
+              echo "### Python $version Results" >> report.md
+              python3 << EOF
+          import xml.etree.ElementTree as ET
+          
+          try:
+              tree = ET.parse('artifacts/test-results-$version/test_results/unit-test-results.xml')
+              root = tree.getroot()
+              
+              total = int(root.get('tests', 0))
+              failures = int(root.get('failures', 0))
+              errors = int(root.get('errors', 0))
+              passed = total - failures - errors
+              
+              print(f"- **Total Tests**: {total}")
+              print(f"- **Passed**: {passed} ✅")
+              print(f"- **Failed**: {failures} ❌")
+              print(f"- **Errors**: {errors} 🔥")
+              if total > 0:
+                  print(f"- **Pass Rate**: {passed * 100 // total}%")
+              print("")
+          except Exception as e:
+              print(f"Error processing Python $version results: {e}")
+          EOF
+            fi
+          done
+
+      - name: Comment PR with comprehensive report
         if: github.event_name == 'pull_request' && always()
         uses: actions/github-script@v7
         with:
           script: |
             const fs = require('fs');
-            const path = require('path');
+            
             try {
-              let comment = `## 🧪 CI/CD Pipeline Results - Run #${{ github.run_number }}\n\n`;
+              const report = fs.readFileSync('report.md', 'utf8');
               
-              // Unit test results
-              const unitXmlPath = path.join('test_results', 'unit-test-results.xml');
-              if (fs.existsSync(unitXmlPath)) {
-                const unitXml = fs.readFileSync(unitXmlPath, 'utf8');
-                const unitTotal = parseInt(unitXml.match(/tests="(\d+)"/)?.[1] || '0', 10);
-                const unitFailures = parseInt(unitXml.match(/failures="(\d+)"/)?.[1] || '0', 10);
-                const unitErrors = parseInt(unitXml.match(/errors="(\d+)"/)?.[1] || '0', 10);
-                const unitPassed = unitTotal - unitFailures - unitErrors;
-                
-                comment += `### 📊 Unit & Integration Tests\n`;
-                comment += `**Summary**: ${unitPassed}/${unitTotal} tests passed `;
-                comment += (unitFailures > 0 || unitErrors > 0)
-                  ? `❌ (${unitFailures} failures, ${unitErrors} errors)\n\n`
-                  : `✅\n\n`;
-              }
-              
-              // Selenium test results
-              const seleniumXmlPath = path.join('test_results', 'selenium-test-results.xml');
-              if (fs.existsSync(seleniumXmlPath)) {
-                const seleniumXml = fs.readFileSync(seleniumXmlPath, 'utf8');
-                const seleniumTotal = parseInt(seleniumXml.match(/tests="(\d+)"/)?.[1] || '0', 10);
-                const seleniumFailures = parseInt(seleniumXml.match(/failures="(\d+)"/)?.[1] || '0', 10);
-                const seleniumErrors = parseInt(seleniumXml.match(/errors="(\d+)"/)?.[1] || '0', 10);
-                const seleniumPassed = seleniumTotal - seleniumFailures - seleniumErrors;
-                
-                comment += `### 🌐 Selenium UI Tests\n`;
-                comment += `**Summary**: ${seleniumPassed}/${seleniumTotal} tests passed `;
-                comment += (seleniumFailures > 0 || seleniumErrors > 0)
-                  ? `❌ (${seleniumFailures} failures, ${seleniumErrors} errors)\n\n`
-                  : `✅\n\n`;
-              }
-              
-              comment += `📊 **View Details**: [Pipeline Results](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})\n`;
-              comment += `📁 **Artifacts**: Test reports and coverage available in workflow artifacts\n`;
+              // Add links to coverage report and artifacts
+              const fullReport = report + `
+          
+              ## 🔗 Quick Links
+              - 📊 [Detailed Test Results](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+              - 📈 [Coverage Report](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+              - 📁 [Download Artifacts](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+              `;
               
               github.rest.issues.createComment({
                 issue_number: context.issue.number,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                body: comment
+                body: fullReport
               });
             } catch (error) {
-              console.error('Error posting comment:', error);
+              console.error('Error posting comprehensive report:', error);
             }
